add css and images

--- a/blockchain.html
+++ b/blockchain.html
@@ -69,20 +69,19 @@
     <div class="container">
 
       <div class="intro-img text-center">
-        <img  src="images/blockchain.png" class="img-fluid wow fadeInUp" style="height: 400px;">
+        <img  src="images/blockchain.png" class="img-fluid" style="height: 400px;">
       </div>
 
       <div class="intro-info">
           <div class="block">
         <h2>Izzy Ai BlockChain</h2>
-          <p class=" wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s"> We are currently working on our opensource AI Blockchain with our team and partners. The whitepaper and platform coming soon.</p>
+          <p> We are currently working on our opensource AI Blockchain with our team and partners. The whitepaper and platform coming soon.</p>
        </div>
       </div>
         <div>
 
         </div>
     </div>
-      </section><!-- #intro -->
       <div class="icons">
           <div class="container">
           <div class="row">
@@ -101,7 +100,7 @@
           </div>
       </div>
 
-  
+  </section><!-- #intro -->
 
 
 
