--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <div class="container">
 
       <div class="intro-img">
-        <img  src="images/robo.png" class="img-fluid  wow fadeInUp" style="height: 400px;">
+        <img  src="images/robo.png" class="img-fluid" style="height: 400px;">
       </div>
 
-      <div class="intro-info wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+      <div class="intro-info">
         <h2>Our open source <br />IZZY AI Blockchain<br> will be announced & <br />deployed 2020</h2>
           <p> PwC predicts that by 2030 AI will add up to $15.7 trillion to<br /> the world economy, and as a result, global GDP will rise by<br /> 14%. According to Gartner's prediction, business value<br /> added by blockchain technology will increase to $3.1 trillion <br /> by the same year.</p>
        
@@ -81,11 +81,7 @@
 
         </div>
     </div>
-     
-
-  </section><!-- #intro -->
-
-     <div class="icons">
+      <div class="icons">
           <div class="container">
           <div class="row">
               <div class="col-md-6">
@@ -102,6 +98,10 @@
               </div>
           </div>
       </div>
+
+  </section><!-- #intro -->
+
+
 
   <!--==========================
     Footer
