--- a/ai.html
+++ b/ai.html
@@ -72,7 +72,7 @@
       <div class="intro-info">
         <div class="col-md-12">
             <div class="col-md-5 pull-left">
-                <div class="divided-section wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                <div class="divided-section">
                     <h4> What is AI?</h4>
                     <p>AI is a set of technologies that allow machines and computer systems to learn, comprehend, and act simulating human intelligence.</p>
                   <h4>Why Businesses should use AI?</h4>
@@ -80,7 +80,7 @@
                 <h4> What is the Future for AI?</h4>
                     <p>As the world becomes more data-driven, AI promises disruption and productivity in data collection and analysis beyond the capabilities of mankind</p>
                <div class="intro-img">
-        <img src="images/robo.png" class="img-fluid wow fadeInUp">
+        <img src="images/robo.png" class="img-fluid">
       </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <div class="divided-section">
                     <h2> Discover use cases for AI Solutions</h2>
                     <h4>Marketing and sales</h4>
-                 <div class="listing wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                 <div class="listing">
                      <ul>
                          <li><span></span> Lead scoring</li>
                          <li><span></span> Customer segmentation</li>
@@ -102,7 +102,7 @@
                  </div>
                     <h4>Chatbots and cognitive agents</h4>
                     <p>We intergrate original and framework-based speech recognition and generation models to create AI-enabled conversational agents. With them, you can automate and improve your service across platform, making it more personalized and relevant for each customer.</p>
-                 <div class="listing wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                 <div class="listing">
                      <ul>
                          <li><span></span> Contextual customer care</li>
                          <li><span></span> Shopping and banking assistants</li>
@@ -113,7 +113,7 @@
                  </div>
                     <h4>Operations and Decision Support</h4>
                     <p>We build smart systems where AI can identify loopholes, anomalies, as well as growth hacking opportunities in your operational processes so that you can act on them timely and appropriately. </p>
-                <div class="listing wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                <div class="listing">
                      <ul>
                          <li><span></span> Financial forecasting</li>
                          <li><span></span> Risk assessment</li>
@@ -126,7 +126,7 @@
                  </div>
                     <h4>Physical and Cyber Security</h4>
                     <p>We direct our artificial intelligence development efforts at protecting physical perimeters, cyber security, and identities of users and employees. From ML models to advanced biometric recognition, we design solutions that tackles old and emerging security threats.</p>
-                 <div class="listing wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                 <div class="listing">
                      <ul>
                          <li><span></span> Biometric identification</li>
                          <li><span></span> Access and authentication control</li>
