--- a/computervision.html
+++ b/computervision.html
@@ -65,10 +65,13 @@
   ============================-->
   <section class="vision">
     <div class="container">
+
+      
+
       <div class="intro-info">
         <div class="col-md-12">
             <div class="col-md-5 pull-left">
-                <div class="divided-section wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                <div class="divided-section">
                     <h2>Computer Vision Use Cases</h2>
                     <h4> Consumers Mobile Applications, Security, Banking, Retail</h4>
                     <h4>Facial Detention</h4>
@@ -81,13 +84,13 @@
                 </div>
             </div>
             <div class="col-md-6 offset-1 pull-left">
-                <div class="divided-section wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+                <div class="divided-section">
                     <h4> What is Computer Vision</h4>
                     <p>Computer vision is a field of artificial intelligence that trains computers to interpret and understand the visual world. Using digital images from cameras and videos and deep learning models, machines can accurately identify and classify objects, and then react to what they "see.</p>
                   
                 </div>
                 <div class="intro-img">
-        <img  src="images/computervision.png" class="img-fluid wow fadeInUp" style="width: 389.07px; height: 588.49px;position: relative; top: 50px;">
+        <img  src="images/computervision.png" class="img-fluid" style="width: 389.07px; height: 588.49px;position: relative; top: 50px;">
       </div>
             </div>
         </div>
@@ -96,7 +99,6 @@
 
         </div>
     </div>
-      </section><!-- #intro -->
       <div class="icons">
           <div class="container">
           <div class="col-md-12">
@@ -115,7 +117,7 @@
           </div>
       </div>
 
-  
+  </section><!-- #intro -->
 
 
 
