--- a/computervisionV.html
+++ b/computervisionV.html
@@ -72,7 +72,7 @@
       <div class="intro-info">
         <div class="col-md-12">
             <div class="col-md-5 pull-left">
-                <div class="divided-section wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s"">
+                <div class="divided-section">
                     <h2>Virtual and Augmented Reality Development</h2>
                     <h4> Artificial Intelligence </h4>
                     <p>Image and speech recognition, accurate mapping and more. Artificial intelligence allows for markerless AR, adding the text and image recognition capabilities. But that's not all. Apart from that, AI makes possible</p>
@@ -91,7 +91,7 @@
             <div class="col-md-6 offset-1 pull-left">
                
                 <div class="intro-img">
-        <img  src="images/computerV.png" class="img-fluid wow fadeInUp">
+        <img  src="images/computerV.png" class="img-fluid">
       </div>
             </div>
         </div>
@@ -100,7 +100,6 @@
 
         </div>
     </div>
-        </section><!-- #intro -->
       <div class="icons">
           <div class="container">
           <div class="col-md-12">
@@ -119,7 +118,7 @@
           </div>
       </div>
 
-
+  </section><!-- #intro -->
 
 
 
